--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <script defer src="./D5/getTheGapX.js"></script>
 
-    <script defer src="./D6.js"></script>
+    <script defer src="./D6/truncateString.js"></script>
 
     <script defer src="./D7.js"></script>
 
