Docs: Add Day 24 Refactor: Day 7 Code

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <script defer src="./D6/truncateString.js"></script>
 
-    <script defer src="./D7.js"></script>
+    <script defer src="./D7/valiidateMobile.js"></script>
 
     <script defer src="./D8.js"></script>
 
@@ -89,7 +89,7 @@
 
     <script defer src="./D23/findEvenIndex.js"></script>
 
-    <script defer src="./D24.js"></script>
+    <script defer src="./D24/expandedForm.js"></script>
 
     <script defer src="./D25.js"></script>
 
@@ -101,7 +101,7 @@
 
     <script defer src="./D29.js"></script>
 
-    <script src="./D30.js"></script>
+    <script defer src="./D30.js"></script>
 
     <script defer src="./D31.js"></script>
 
