--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <script defer src="./D7/valiidateMobile.js"></script>
 
-    <script defer src="./D8.js"></script>
+    <script defer src="./D8/daysBetweenDates.js"></script>
 
     <script defer src="./D9.js"></script>
 
