Doc: Add Day 25

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <script defer src="./D24/expandedForm.js"></script>
 
-    <script defer src="./D25.js"></script>
+    <script defer src="./D25/spinWords.js"></script>
 
     <script defer src="./D26.js"></script>
 
