Doc: Day 9 update

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <script defer src="./D8/daysBetweenDates.js"></script>
 
-    <script defer src="./D9.js"></script>
+    <script defer src="./D9/isEmpty.js"></script>
 
     <script defer src="./D10.js"></script>
 
