--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <script defer src="./D9/isEmpty.js"></script>
 
-    <script defer src="./D10.js"></script>
+    <script defer src="./D10/removeArrayElement.js"></script>
 
     <script defer src="./D11.js"></script>
 
