--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <script defer src="./D25/spinWords.js"></script>
 
-    <script defer src="./D26.js"></script>
+    <script defer src="./D26/oddInt.js"></script>
 
     <script defer src="./D27.js"></script>
 
