--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <script defer src="./D10/removeArrayElement.js"></script>
 
-    <script defer src="./D11.js"></script>
+    <script defer src="./D11/fibonacci.js"></script>
 
     <script defer src="./D12.js"></script>
 
