Docs: DAY 27 Vowel Count Task

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <script defer src="./D26/oddInt.js"></script>
 
-    <script defer src="./D27.js"></script>
+    <script defer src="./D27/vowelCount.js"></script>
 
     <script defer src="./D28.js"></script>
 
