Doc:  DAY 28 Task:  weIrD StRiNg CaSe

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <script defer src="./D27/vowelCount.js"></script>
 
-    <script defer src="./D28.js"></script>
+    <script defer src="./D28/weirdString.js"></script>
 
     <script defer src="./D29.js"></script>
 
