--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <script defer src="./D11/fibonacci.js"></script>
 
-    <script defer src="./D12.js"></script>
+    <script type="module" src="./D12/sayNumberInEnglish.js"></script>
 
     <script defer src="./D13.js"></script>
 
