--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <script defer src="./D28/weirdString.js"></script>
 
-    <script defer src="./D29.js"></script>
+    <script defer src="./D29/accum.js"></script>
 
     <script defer src="./D30.js"></script>
 
