--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <script type="module" src="./D12/sayNumberInEnglish.js"></script>
 
-    <script defer src="./D13.js"></script>
+    <script defer src="./D13/D13spaceAge.js"></script>
 
     <script defer src="./D14.js"></script>
     <script defer src="./D15.js"></script>
