--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <script defer src="./D29/accum.js"></script>
 
-    <script defer src="./D30.js"></script>
+    <script defer src="./D30/mexicanWave.js"></script>
 
     <script defer src="./D31.js"></script>
 
