--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <script defer src="./D13/D13spaceAge.js"></script>
 
-    <script defer src="./D14.js"></script>
+    <script defer src="./D14/D14ArrayOfDigitToAnotherBase.js"></script>
     <script defer src="./D15.js"></script>
 
     <script defer src="./D16.js"></script>
