--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <script defer src="./D30/mexicanWave.js"></script>
 
-    <script defer src="./D31.js"></script>
+    <script defer src="./D31/factorial.js"></script>
 
     <script defer src="./D32.js"></script>
 
