--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <script defer src="./D31/factorial.js"></script>
 
-    <script defer src="./D32.js"></script>
+    <script defer src="./D32/gcd.js"></script>
 
     <script defer src="./D33.js"></script>
 
