--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <script defer src="./D13/D13spaceAge.js"></script>
 
     <script defer src="./D14/D14ArrayOfDigitToAnotherBase.js"></script>
-    <script defer src="./D15.js"></script>
+    <script defer src="./D15/isPangram.js"></script>
 
     <script defer src="./D16.js"></script>
 
