--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <script defer src="./D32/gcd.js"></script>
 
-    <script defer src="./D33.js"></script>
+    <script defer src="./D33/uniqueValue.js"></script>
 
     <script defer src="./D34.js"></script>
 
