Update: DAY 34 Task: Most freq number in array.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <script defer src="./D33/uniqueValue.js"></script>
 
-    <script defer src="./D34.js"></script>
+    <script defer src="./D34/mostFreq.js"></script>
 
     <script defer src="./D35.js"></script>
 
