--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <script defer src="./D34/mostFreq.js"></script>
 
-    <script defer src="./D35.js"></script>
+    <script defer src="./D35/nthLargest.js"></script>
 
     <script defer src="./D36.js"></script>
 
