--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <script defer src="./D35/nthLargest.js"></script>
 
-    <script defer src="./D36.js"></script>
+    <script defer src="./D36/transcription.js"></script>
 
     <script defer src="./D37.js"></script>
 
