Update: Complete DAY 37 of JS Challenge

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <script defer src="./D36/transcription.js"></script>
 
-    <script defer src="./D37.js"></script>
+    <script defer src="./D37/leapyr.js"></script>
 
     <script defer src="./D38.js"></script>
 
