Update: DAY 38 Validate the Number using Luhn Algorithm

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <script defer src="./D37/leapyr.js"></script>
 
-    <script defer src="./D38.js"></script>
+    <script defer src="./D38/luhnValid.js"></script>
 
     <script defer src="./D39.js"></script>
 
