Update: DAY 39 Task: Time to Mix Juices

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <script defer src="./D38/luhnValid.js"></script>
 
-    <script defer src="./D39.js"></script>
+    <script defer src="./D39/timeToMixJuice.js"></script>
 
     <script defer src="./D40.js"></script>
 
