--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <script defer src="./D39/timeToMixJuice.js"></script>
 
-    <script defer src="./D40.js"></script>
+    <script defer src="./D40/vehiclePurchase.js"></script>
 
     <script defer src="./D41.js"></script>
 
