Update: DAY 41 Task: Categorize New Member

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <script defer src="./D40/vehiclePurchase.js"></script>
 
-    <script defer src="./D41.js"></script>
+    <script defer src="./D41/openOrSenior.js"></script>
 
     <script defer src="./D42.js"></script>
 
