Update: DAY 42 Task: Add 2 smallest positive integers in an array

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <script defer src="./D41/openOrSenior.js"></script>
 
-    <script defer src="./D42.js"></script>
+    <script defer src="./D42/sumTwoSmallestNumbers.js"></script>
 
     <script defer src="./D43.js"></script>
 
