Update:  ( DAY 43 ) Task: Highest Scoring Word

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <script defer src="./D42/sumTwoSmallestNumbers.js"></script>
 
-    <script defer src="./D43.js"></script>
+    <script defer src="./D43/high.js"></script>
 
     <script defer src="./D44.js"></script>
 
