Update:  DAY 44  Task:  COUNT THE DIVISORS OF A NUMBER

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <script defer src="./D43/high.js"></script>
 
-    <script defer src="./D44.js"></script>
+    <script defer src="./D44/getDivisorCount.js"></script>
 
     <script defer src="./D45.js"></script>
 
