--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <script defer src="./D44/getDivisorCount.js"></script>
 
-    <script defer src="./D45.js"></script>
+    <script defer src="./D45/findOutLier.js"></script>
 
     <script defer src="./D46.js"></script>
 
