--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <script defer src="./D14/D14ArrayOfDigitToAnotherBase.js"></script>
     <script defer src="./D15/isPangram.js"></script>
 
-    <script defer src="./D16.js"></script>
+    <script defer src="./D16/lackadaisical.js"></script>
 
-    <script defer src="./D17.js"></script>
+    <script defer src="./D17/largest.js"></script>
 
-    <script defer src="./D18.js"></script>
+    <script defer src="./D18/numberofGrains.js"></script>
 
-    <script defer src="./D19.js"></script>
+    <script defer src="./D19/resistorColor.js"></script>
 
     <script defer src="./D20/add.js"></script>
 
