Update: DAY 46 (Find the indexOf "needle")

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <script defer src="./D45/findOutLier.js"></script>
 
-    <script defer src="./D46.js"></script>
+    <script defer src="./D46/findNeedle.js"></script>
 
     <script defer src="./D47.js"></script>
 
