Update: DAY 47 TAsk: Is the String Isogram ?

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <script defer src="./D46/findNeedle.js"></script>
 
-    <script defer src="./D47.js"></script>
+    <script defer src="./D47/isIsogram.js"></script>
 
     <script defer src="./D48.js"></script>
 
