Update: DAY 48 Task: Convert time into Human Readable Format

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <script defer src="./D47/isIsogram.js"></script>
 
-    <script defer src="./D48.js"></script>
+    <script defer src="./D48/formatDuration.js"></script>
 
     <script defer src="./D49.js"></script>
 
