Update: DAY 49 TAsk: is this a Triangle

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     <script defer src="./D48/formatDuration.js"></script>
 
-    <script defer src="./D49.js"></script>
+    <script defer src="./D49/isTriangle.js"></script>
 
     <script defer src="./D50.js"></script>
   </body>
