Update: DAY 50 Task: Find the middle character from the string.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,6 @@
 
     <script defer src="./D49/isTriangle.js"></script>
 
-    <script defer src="./D50.js"></script>
+    <script defer src="./D50/middleChar.js"></script>
   </body>
 </html>
